--- a/6.1+Font+Properties/index.html
+++ b/6.1+Font+Properties/index.html
@@ -24,9 +24,22 @@
       font-weight: 900;
     }
 
+    #front-family {
+        font-family: 'Caveat';
+        font-weight: 400;
+    }
+
+    #text {
+      text-align: right;
+    }
+
+    html {
+      font-size: 30px;
+    }
     
     
   </style>
+  <link href="https://fonts.google.com/specimen/Caveat" >
 </head>
 
 <body>
